4 new variant + 2 new backs
Cosplay:
-Rias
-Eula
Facial:
-Cynthia
-Pokemon

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         };
 
         const latestCards = [
-            "Yae_Miko", "Shorekeeper", "Yinlin","Makima"
+            "Yae_Miko", "Shorekeeper", "Yinlin","Makima","Tsunade","Rias","Eula","Cynthia"
         ];
 
         const searchInput = document.getElementById("searchInput");
