--- a/latest.html
+++ b/latest.html
@@ -63,6 +63,18 @@
 
     <div class="news-entry">
         <h2>03/06/2025</h2>
+        <div class="category">Pokemon:</div>
+        <ul>
+            <li>Tsunade (Variant)</li>
+        </ul>
+        <div class="category">Pokemon:</div>
+        <ul>
+            <li>Cynthia (Variant)</li>
+        </ul>
+        <div class="category">High School DxD:</div>
+        <ul>
+            <li>Rias gremory (Variant)</li>
+        </ul>
         <div class="category">Wuthering Waves:</div>
         <ul>
             <li>Shorekeeper</li>
@@ -71,6 +83,7 @@
         <div class="category">Genshin Impact:</div>
         <ul>
             <li>Yae Miko</li>
+            <li>Eula Lawrence(Variant)</li>
         </ul>
         <div class="category">Others:</div>
         <ul>
