Add Gwen Stacy, Black Cat, Arlechinno and Variant 2B

--- a/latest.html
+++ b/latest.html
@@ -84,10 +84,17 @@
         <ul>
             <li>Yae Miko</li>
             <li>Eula Lawrence(Variant)</li>
+            <li>Arlechinno</li>
+        </ul>
+        <div class="category">Marvel:</div>
+        <ul>
+            <li>Gwen Stacy</li>
+            <li>Black Cat</li>
         </ul>
         <div class="category">Others:</div>
         <ul>
             <li>Makima</li>
+            <li>2B (Variant)</li>
         </ul>
     </div>
 
