--- a/viewer.html
+++ b/viewer.html
@@ -132,7 +132,7 @@
         const variantButtonsContainer = document.getElementById("variantButtons");
 
         const backGroups = {
-            "cosplay": ["Rias_2","Eula_2"],
+            "cosplay": ["Rias_2","Eula_2","2B_2"],
             "facial": ["Tsunade_2", "Cynthia_2"],
             //"summer": ["Furina_2", "Eula_3"]
         };
