--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
     <script>
         const cardData = {
-            "Genshin Impact": { type: "game", cards: ["Ganyu", "Yelan", "Eula", "Rosaria", "Furina","Shinobu","Yae_Miko"] },
+            "Genshin Impact": { type: "game", cards: ["Ganyu", "Yelan", "Eula", "Rosaria", "Furina","Shinobu","Yae_Miko","Arlechinno"] },
             "Zenless Zone Zero": { type: "game", cards: ["Miyabi", "Evelyn", "Caesar", "Jane"] },
             "Withering Waves": { type: "game", cards: ["Jinhsi", "Cantarella", "Phoebe", "Zani","Shorekeeper","Yinlin"] },
             "Overwatch": { type: "game", cards: ["Dva", "Mercy", "Kiriko"] },
@@ -215,12 +215,12 @@
             "Azur Lane": { type: "game", cards: ["Elbe", "Belfast", "Taihou"] },
             "Umamusume": { type: "game", cards: ["Kiseki"] },
             "DC": { type: "anime", cards: ["Zatanna", "Hawkgirl"] },
-            "Marvel": { type: "anime", cards: ["Psylocke", "Rogue"] },
+            "Marvel": { type: "anime", cards: ["Psylocke", "Rogue","Gwen_Stacy", "Black_Cat"] },
             "Other": { type: "other", cards: ["Ram", "Rei", "Weiss", "Purah", "2B", "Mitsuri","Nakano_Miku","Makima"] }
         };
 
         const latestCards = [
-            "Yae_Miko", "Shorekeeper", "Yinlin","Makima","Tsunade","Rias","Eula","Cynthia"
+            "Yae_Miko", "Shorekeeper", "Yinlin","Makima","Tsunade","Rias","Eula","Cynthia","Arlechinno","Gwen_Stacy","Black_Cat","2B"
         ];
 
         const searchInput = document.getElementById("searchInput");
