Add Jean, Ellen, Shishiro Botan and Tokai Teio

--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
 
     <script>
         const cardData = {
-            "Genshin Impact": { type: "game", cards: ["Ganyu", "Yelan", "Eula", "Rosaria", "Furina","Shinobu","Yae_Miko","Arlechinno"] },
-            "Zenless Zone Zero": { type: "game", cards: ["Miyabi", "Evelyn", "Caesar", "Jane"] },
+            "Genshin Impact": { type: "game", cards: ["Ganyu", "Yelan", "Eula", "Rosaria", "Furina","Shinobu","Yae_Miko","Arlechinno","Jean"] },
+            "Zenless Zone Zero": { type: "game", cards: ["Miyabi", "Evelyn", "Caesar", "Jane","Ellen"] },
             "Withering Waves": { type: "game", cards: ["Jinhsi", "Cantarella", "Phoebe", "Zani","Shorekeeper","Yinlin"] },
             "Overwatch": { type: "game", cards: ["Dva", "Mercy", "Kiriko"] },
             "League of Legends": { type: "game", cards: ["Jinx", "Miss_Fortune"] },
             "Pokemon": { type: "game", cards: ["Cynthia", "Hex_Maniac"] },
-            "Hololive": { type: "vtuber", cards: ["Calliope", "Coco", "Okayu", "Mio"] },
+            "Hololive": { type: "vtuber", cards: ["Calliope", "Coco", "Okayu", "Mio","Shishiro_Botan"] },
             "Indie Virutal Youtuber": { type: "vtuber", cards: ["Shylily", "Patra", "Melody", "Silvervale"] },
             "Love Live!": { type: "anime", cards: ["Maki", "Setsuna","Eli"] },
             "High School DxD": { type: "anime", cards: ["Rossweiss", "Akeno", "Rias"] },
@@ -213,14 +213,14 @@
             "Final Fantasy": { type: "game", cards: ["Rikku", "Aerith", "Tifa"] },
             "Last Origin": { type: "game", cards: ["Sekhmet_of_Death", "Cerestia_of_Life", "Miho", "Fenrir"] },
             "Azur Lane": { type: "game", cards: ["Elbe", "Belfast", "Taihou"] },
-            "Umamusume": { type: "game", cards: ["Kiseki"] },
+            "Umamusume": { type: "game", cards: ["Kiseki",'Tokai_Teio'] },
             "DC": { type: "anime", cards: ["Zatanna", "Hawkgirl"] },
             "Marvel": { type: "anime", cards: ["Psylocke", "Rogue","Gwen_Stacy", "Black_Cat"] },
             "Other": { type: "other", cards: ["Ram", "Rei", "Weiss", "Purah", "2B", "Mitsuri","Nakano_Miku","Makima"] }
         };
 
         const latestCards = [
-            "Yae_Miko", "Shorekeeper", "Yinlin","Makima","Tsunade","Rias","Eula","Cynthia","Arlechinno","Gwen_Stacy","Black_Cat","2B"
+            "Jean", "Ellen", "Shishiro_Botan","Tokai_Teio"
         ];
 
         const searchInput = document.getElementById("searchInput");
