--- a/latest.html
+++ b/latest.html
@@ -62,6 +62,27 @@
     <h1>🆕 Latest Card Additions</h1>
 
     <div class="news-entry">
+        <h2>04/06/2025</h2>
+
+        <div class="category">Umamusume:</div>
+        <ul>
+            <li>Tokai Teio</li>
+        </ul>
+        <div class="category">Hololive:</div>
+        <ul>
+            <li>Shishiro Botan</li>
+        </ul>
+        <div class="category">Zenless Zone Zero:</div>
+        <ul>
+            <li>Ellen</li>
+        </ul>
+        <div class="category">Genshin Impact:</div>
+        <ul>
+            <li>Jean Gunnhildr</li>
+        </ul>
+    </div>
+
+    <div class="news-entry">
         <h2>03/06/2025</h2>
         <div class="category">Pokemon:</div>
         <ul>
@@ -123,23 +144,6 @@
         </ul>
     </div>
 
-    <div class="news-entry">
-        <h2>01/06/2025</h2>
-        <div class="category">Wuthering Waves 🆕 :</div>
-        <ul>
-            <li>Jinhsi</li>
-            <li>Cantarella</li>
-            <li>Phoebe</li>
-            <li>Zani</li>
-        </ul>
-        <div class="category">Zenless Zone Zero 🆕 :</div>
-        <ul>
-            <li>Hoshimi Miyabi</li>
-            <li>Evelyn Chevalier</li>
-            <li>Caesar King</li>
-            <li>Jane Doe</li>
-        </ul>
-    </div>
 
 
     <!-- More entries can be added in the same format -->
