--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
     <script>
         const cardData = {
             "Genshin Impact": { type: "game", cards: ["Ganyu", "Yelan", "Eula", "Rosaria", "Furina","Shinobu","Yae_Miko","Arlechinno","Jean"] },
-            "Zenless Zone Zero": { type: "game", cards: ["Miyabi", "Evelyn", "Caesar", "Jane","Ellen"] },
+            "Zenless Zone Zero": { type: "game", cards: ["Miyabi", "Evelyn", "Caesar", "Jane", "Ellen"] },
+            "Honkai: Star Rail": { type: "game", cards: ["Kafka", "Fu_Xuan", "Silverwolf", "Firefly"] },
             "Withering Waves": { type: "game", cards: ["Jinhsi", "Cantarella", "Phoebe", "Zani","Shorekeeper","Yinlin"] },
             "Overwatch": { type: "game", cards: ["Dva", "Mercy", "Kiriko"] },
             "League of Legends": { type: "game", cards: ["Jinx", "Miss_Fortune"] },
@@ -220,7 +221,7 @@
         };
 
         const latestCards = [
-            "Jean", "Ellen", "Shishiro_Botan","Tokai_Teio"
+            "Jean", "Ellen", "Shishiro_Botan", "Tokai_Teio", "Kafka", "Fu_Xuan", "Silverwolf", "Firefly"
         ];
 
         const searchInput = document.getElementById("searchInput");
