--- a/latest.html
+++ b/latest.html
@@ -64,6 +64,13 @@
     <div class="news-entry">
         <h2>04/06/2025</h2>
 
+        <div class="category">Honkai:Star Rail 🆕:</div>
+        <ul>
+            <li>Kafka</li>
+            <li>Silverwolf</li>
+            <li>Fu Xuan</li>
+            <li>Firefly</li>
+        </ul>
         <div class="category">Umamusume:</div>
         <ul>
             <li>Tokai Teio</li>
